--- a/Style/style.css
+++ b/Style/style.css
@@ -1,59 +1,34 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-.navbar {
-    background-color: #333;
-    overflow: hidden;
-}
-
-.nav-list {
+    font-size: 28px;
+  }
+  
+  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    display: flex;
-}
-
-.nav-item {
-    flex-grow: 1;
-    text-align: center;
-}
-
-.nav-item a {
+    overflow: hidden;
+    background-color: #333;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
     display: block;
-    padding: 15px;
     color: white;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    transition: background-color 0.3s;
-}
-
-.nav-item.active a {
-    background-color: #555;
-}
-
-@media (max-width: 768px) {
-    .navbar {
-        position: relative;
-    }
-    
-    .nav-list {
-        flex-direction: column;
-        position: absolute;
-        width: 100%;
-        background-color: #444;
-        display: none;
-    }
-    
-    .nav-item {
-        text-align: left;
-    }
-    
-    .nav-item.active a {
-        background-color: transparent;
-    }
-    
-    .nav-list.active {
-        display: block;
-    }
-}
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
+  
+  .active {
+    background-color: #4CAF50;
+  }
