--- a/Contact/Style/comments.css
+++ b/Contact/Style/comments.css
@@ -7,10 +7,30 @@ input[type=text], select {
     border-radius: 4px;
     box-sizing: border-box;
   }
+
+  input[type=tel], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  input[type=email], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
   
   input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #b500d4;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -20,7 +40,7 @@ input[type=text], select {
   }
   
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #50006b;
   }
   
   div {
