--- a/Style/style.css
+++ b/Style/style.css
@@ -1,5 +1,8 @@
 body {
     font-size: 28px;
+    background-image: url('../Media/BG.jpeg');
+    background-repeat: no-repeat;
+    background-size:100%;
   }
   
   ul {
@@ -45,4 +48,9 @@ body {
 
 ul.navbar li.login {
   float: right; /* Align the login button to the right */
+}
+
+.box {
+  background-color:white;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07), 0 2px 4px rgba(0,0,0,0.07), 0 4px 8px rgba(0,0,0,0.07), 0 8px 16px rgba(0,0,0,0.07), 0 16px 32px rgba(0,0,0,0.07), 0 32px 64px rgba(0,0,0,0.07);
 }
